--- a/selectors/files/01_attr_caseinsensitiveB.html
+++ b/selectors/files/01_attr_caseinsensitiveB.html
@@ -7,26 +7,19 @@ head, style {display: block;}
 [contenteditable] {-webkit-user-modify: read-write-plaintext-only;}
 style:first-of-type {visibility:hidden;}
 style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; white-space:pre; border-radius: 10px; border: 3px solid #aaa; background-color:#dedede; margin: 20px auto; width: 80%; font-family:"Courier New", Courier, monospace;}
-ol {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
-li {color: black;}
-
-ol {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
-li {color: black;}
-li li {color: green;}
+p {font-size: 3vw; font-family: georgia;}
 </style>
 
-<style contenteditable>
-p[class="text"] { color: red; }
+<style contenteditable>p[class="text"] { color: red; }
 p[class="TEXT"] { color: blue; }
 p[class="TeXt" i] { color: green; }
 </style>
 <title>Attribute selector and case sensitivity</title>
 </head>
-<ul>
-	<li><p class="TEXT"> class="TEXT"</p>
-	<li><p class="text"> class="text"</p>
-	<li><p class="TeXt"> class="TeXt"</p>
-</ul>
+<p class="TEXT"> class="TEXT"</p>
+<p class="text"> class="text"</p>
+<p class="TeXt"> class="TeXt"</p>
+
 <body>
 </body>
 </html>
