updates to specificity and included files

--- a/selectors/files/01_attr.html
+++ b/selectors/files/01_attr.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="editme.css">
 <style>
-head, style {display: block;}
-[contenteditable] {-webkit-user-modify: read-write-plaintext-only;}
-style:first-of-type {visibility:hidden;}
-style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; white-space:pre; border-radius: 10px; border: 3px solid #aaa; background-color:#dedede; margin: 20px auto; width: 80%; font-family:"Courier New", Courier, monospace;}
 ol {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
 li {color: black;}
 
@@ -14,7 +11,7 @@ li {color: black;}
 li li {color: green;}
 </style>
 
-<style contenteditable>li[title] {color: purple; font-weight: bold;}
+<style contenteditable class="editme">li[title] {color: purple; font-weight: bold;}
 a[href] {text-decoration: overline;}
 </style>
 <title>CSS Selector Test</title>
