--- a/selectors/files/01_attr_caseinsensitiveB.html
+++ b/selectors/files/01_attr_caseinsensitiveB.html
@@ -2,15 +2,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<style>
-head, style {display: block;}
-[contenteditable] {-webkit-user-modify: read-write-plaintext-only;}
-style:first-of-type {visibility:hidden;}
-style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; white-space:pre; border-radius: 10px; border: 3px solid #aaa; background-color:#dedede; margin: 20px auto; width: 80%; font-family:"Courier New", Courier, monospace;}
+  <link rel="stylesheet" href="editme.css"><style>
+
 p {font-size: 3vw; font-family: georgia;}
 </style>
 
-<style contenteditable>p[class="text"] { color: red; }
+<style contenteditable class="editme">p[class="text"] { color: red; }
 p[class="TEXT"] { color: blue; }
 p[class="TeXt" i] { color: green; }
 </style>
