--- a/selectors/files/01_attr_caseinsensitive.html
+++ b/selectors/files/01_attr_caseinsensitive.html
@@ -1,12 +1,8 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
+	  <link rel="stylesheet" href="editme.css">
 <style>
-head, style {display: block;}
-[contenteditable] {-webkit-user-modify: read-write-plaintext-only;}
-style:first-of-type {visibility:hidden;}
-style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; white-space:pre; border-radius: 10px; border: 3px solid #aaa; background-color:#dedede; margin: 20px auto; width: 80%; font-family:"Courier New", Courier, monospace;}
 ol {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
 li {color: black;}
 
@@ -15,7 +11,7 @@ li {color: black;}
 li li {color: green;}
 </style>
 
-<style contenteditable>input[type=text] { border: 5px solid red; }
+<style contenteditable class="editme">input[type=text] { border: 5px solid red; }
 input[type=TEXT] { border: 5px solid blue; }
 input[type=TeXt i] { border: 5px solid green; }
 </style>
