added media queries section

--- a/selectors/index.html
+++ b/selectors/index.html
@@ -1120,6 +1120,7 @@ a:not(:local-link(0)){
   <pre contenteditable class="double">:hover
 :active
 :focus</pre>
+<p>Note: always style :focus when you style :hover</p>
 <pre>:focus-ring
 :focus-within</pre>
 
