added colors section

--- a/media/index.html
+++ b/media/index.html
@@ -614,50 +614,12 @@ min-resolution: 192dpi</pre>
   <a href="files/circlesvgimg.html" class="objectlink" target="play">Play</a>
  </div>
 
- <!-- SVG Media Queries -->
-<div class="slide object">
-  <header><h1>Clown Car Technique</h1></header>
-  <object data="files/svgimg.html"></object>
-  <a href="files/svgimg.html" class="objectlink" target="play">Play</a>
- </div>
-
-  <!-- SVG Media Queries -->
-<div class="slide object">
-  <header><h1>Clown Car Technique</h1></header>
-  <object data="files/adaptiveimages.html"></object>
-  <a href="files/adaptiveimages.html" class="objectlink" target="play">Play</a>
- </div>
-
+<!--NEXT-->
 <div class="slide intro">
-  <header><h1>Up Next: </h1></header>
-    <section class="content">
-      <h1><a href="../selectors/30.html">CSS3 Selectors</a></h1>
-
-      <p><a href="../selectors/30.html">short</a> |
-      <a href="../selectors/">longer</a></p>
-
-      <p><br/><a href="index.html#slide12">Main deck</a></p>
-    </section>
+     <header><h1>Colors &amp; Transparency</h1></header>
+     <section class="content">(briefly)</section>
+    <h1><a href="../colors/">Next ➹</a></h1>
 </div>
-
-
-
-
-<!-- Thank you -->
-<div class="slide normal">
-     <header>
-      <h1>Thank you</h1>
-     </header>
-
-       <section>
-            <div style="float:right"><img src="http://akamaicovers.oreilly.com/images/9780980846904/cat.gif" alt="HTML5 and CSS3 for the Real World"><img src="http://akamaicovers.oreilly.com/images/0636920018063/cat.gif" alt="HTML5: The Definitive Guide" style="margin: 0 20px;"/><img src="http://akamaicovers.oreilly.com/images/0636920021711/cat.gif" alt="MObile HTML5" style="margin: 0 20px;"/><img src="http://akamaicovers.oreilly.com/images/0636920025955/cat.gif" alt="Web Performance Daybook"/></div>
-            <ul class="sevenless">
-              <li>Estelle Weyl</li>
-              <li><a href="http://standardista.com">standardista.com</a></li>
-              <li><a href="http://twitter.com/estellevw">@estellevw</a></li>
-            </ul>
-		  </section>
-    </div>
 
 
 
